--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-react-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://connorbodin.github.io/github-portfolio",
+  "homepage": "https://harrisonboatman.github.io/Portfolio-V2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
